<resources>
    <string name="app_name">busnusantara</string>
    <string name="title_activity_passenger_maps">Map of the Journey</string>
    <string name="your_trip_info">Your Trip Information</string>
    <string name="start_point">Start</string>

    <!--    To be translated -->
    <string name="bus_has_wifi">Bus Wifi</string>
    <string name="bus_type">Bus Type</string>
    <string name="bus_toilets">Has Toilets?</string>
    <!--    End of to be translated -->

    <string name="destination_point">Destination</string>
    <string name="trip_date">Date</string>
    <string name="num_passengers">No. of Passengers</string>
    <string name="bus_num">Bus No.</string>
    <string name="scan_qr">Scan QR code</string>
    <string name="search_route">Search Route</string>
    <string name="enter_destination">Enter your destination</string>
    <string name="enter_starting_location">Enter your starting location</string>
    <string name="find_route">Find if there is a route</string>
    <string name="scan_qr_passenger">Please choose previous journey (if available) or
        scan the QR Code on your ticket to input new journey</string>
    <string name="scan_qr_driver">Please choose previous journey (if available) or
        scan the QR Code on your SPJ to input new journey</string>
    <string name="next">Next</string>
    <string name="time_of_departure">Time of Departure</string>
    <string name="not_found">Not found</string>
    <string name="i_am">I am a …</string>
    <string name="i_am_bus_driver">Bus Driver</string>
    <string name="i_am_passenger">Passenger</string>
    <string name="stops_remaining">Stops Remaining</string>
    <string name="need_location">We need the location permission</string>
    <string name="route_not_found">No route was found. Please try again</string>
    <string name="stop_not_found">No stop was found. Please try again</string>
    <string name="need_camera">We need the camera permission</string>
    <string name="baseline">baseline</string>
    <string name="bus_nusantara">Bus Nusantara</string>
    <string name="request_stop">Request toilet stop</string>
    <string name="requested">Requested</string>
    <string name="pause_journey">Pause journey</string>
    <string name="resume">Resume</string>
    <string name="time">Time</string>
    <string name="welcome">Welcome to Bus Nusantara</string>
    <string name="confirm">Confirm</string>
    <string name="app_desc">Easily track your bus with us by scanning your ticket QR code.
        You can also easily see the details and the ETA of the bus stops.
        Enjoy your trip! </string>
    <string name="enter_as">Enter as</string>
    <string name="pick_one_option">Pick one option</string>
    <string name="next_tooltip">Tap to continue to the next page</string>
    <string name="request_stop_tooltip">Press if you would like for the bus to stop for a bit,
        e.g. for toilet break</string>
    <string name="requested_tooltip" translatable="false">Press if you would like for the bus to stop for a bit,
        e.g. for toilet break</string>
    <string name="confirm_journey_tooltip">Please check if your bus trip information is correct
        and press confirm to go to the next page</string>
    <string name="your_stop">Your Stop</string>
    <string name="bus_location">Bus Location</string>
    <string name="bus_stopping_soon">Bus Stopping Soon</string>
    <string name="bus_not_stopping_soon">Bus not stopping soon</string>
    <string name="bus_distance">Bus distance from you: </string>
    <string name="bus_duration">Bus ETA: </string>
    <string name="the_next_stop_is">The next stop is:</string>
    <string name="the_final_destination_is">The final destination is</string>
    <string name="the_starting_location_is">The starting location is</string>
    <string name="choose_bus_trip">Choose Bus Trip</string>
    <string name="previous_journey">Previous journey</string>
    <string name="bus_arriving_in">Your bus will arrive in</string>
    <string name="nobody_toilet_request">Nobody is requesting a toilet break</string>
    <plurals name="passenger_count">
        <item quantity="zero">no passengers</item>
        <item quantity="one">1 passenger</item>
        <item quantity="other">%d passengers</item>
    </plurals>
    <plurals name="num_stop_requests">
        <item quantity="other">number of stop requests: %d</item>
    </plurals>
</resources>
