<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SearchRoute">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/busDistanceString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/bus_distance" />

        <TextView
            android:id="@+id/busDistanceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="#F44336" />

        <TextView
            android:id="@+id/busDurationString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/bus_duration" />

        <TextView
            android:id="@+id/busDurationValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="#F44336" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".PassengerMapsActivity" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/baseline"
            android:paddingTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bottom_sheet_baseline" />


        <TextView
            android:id="@+id/stopSoonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text=""
            android:textColor="@color/light_black" />

        <Button
            android:id="@+id/requestStopButton"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/softblue"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/request_stop"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/remaining_stops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:paddingTop="50dp"
            android:text="@string/stops_remaining"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLocations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="top|center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>